[package]
name = "futilities"
version = "0.1.1"
authors = ["Dylan <dylan_w2014@outlook.com>"]
edition = "2018"
description = "File utilities, currently only detects image file formats."
keywords = ["utility", "file"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.21.0"